# Motion-Planning

hw1/: hw1.odt
hw2/: hw2.odt
hw3/: hw3.odt
hw4/: hw4.fdb_latexmk  hw4.fls  hw4.odt
hw5/: hw5 copy.aux  hw5 copy.fdb_latexmk  hw5 copy.fls  hw5.fdb_latexmk  hw5.fls  hw5.tex
hw6/: hw6.aux  hw6.fdb_latexmk  hw6.fls  hw6.tex
hw7/: e1a2.py  e1b2w1.csv  e1b2w2.csv  e2b.py  e2bw1.csv  e2bw2.csv  e2bw3.csv  prmResults.csv  steveGilletHW7.aux  steveGilletHW7.fdb_latexmk  steveGilletHW7.fls  steveGilletHW7.tex
hw8/: average.py  benchmarkCentralized2.csv  benchmarkCentralized3.csv  benchmarkCentralized4.csv  benchmarkCentralized5.csv  benchmarkCentralized6.csv  benchmarkMain  gilletSteveHW8.aux  gilletSteveHW8.fdb_latexmk  gilletSteveHW8.fls  gilletSteveHW8.tex  plotter.py
hw9/: 1dii.py  1dii01.csv  1dii010.csv  1dii015.csv  1dii05.csv  1dii21.csv  1dii210.csv  1dii215.csv  1dii25.csv  1dii41.csv  1dii410.csv  1dii415.csv  1dii45.csv  2b.csv  2b.py  car1.csv  gilletSteveHW9.aux  gilletSteveHW9.fdb_latexmk  gilletSteveHW9.fls  gilletSteveHW9.tex  try1.csv
miniProject/: gilletSteveMiniProject.aux  gilletSteveMiniProject.fdb_latexmk  gilletSteveMiniProject.fls  gilletSteveMiniProject.tex
project/: AMP-report-style.sty  gilletSteveProjectProposal.fdb_latexmk  gilletSteveProjectProposal.fls  gilletSteveProjectProposal.tex  steveGilletProject.aux  steveGilletProject.fdb_latexmk  (+2 more)
project/code/: CMakeLists.txt  animate.py  main.cpp  main2.cpp  solver.py  visualize.py  visualizeIntersection.py
project/code/include/: 3dRRT.h  rrt.h
project/code/src/: 3dRRT.cpp  rrt.cpp
